Implement full Java application with domain models, business services, and GUI controllers Add FXML views, data persistence, and project configuration for production build